Fixed popup opening on button click. Popup now aligns to the center of the page

--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@
 
 
 .popup { /* hidden by default*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -18,6 +16,12 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
+}
+
+.popup-open {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .open-button {
@@ -31,6 +35,7 @@
 }
 
 .popup-container {
+    
     max-width: 300px;
     padding: 10px;
     background-color: white;
